<resources>

    <string name="app_name">FOSDEM Companion</string>

    <!-- Main screen -->
    <string name="main_menu">Main menu</string>
    <string name="close_menu">Close menu</string>
    <string name="last_update">DB last updated: %1$s</string>
    <string name="never">Never</string>
    <string name="update_events_db">Update sessions database</string>
    <string name="events_download_up_to_date">Database is already up-to-date</string>
    <string name="events_download_empty">No new sessions found</string>

    <plurals name="events_download_completed">
        <item quantity="one">Completed downloading %1$d session</item>
        <item quantity="other">Completed downloading %1$d sessions</item>
    </plurals>

    <!-- Main menu -->
    <string name="menu_tracks">Tracks</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_live">Live</string>
    <string name="menu_speakers">Speakers</string>
    <string name="menu_map">Map</string>
    <string name="menu_stands">Stands</string>

    <!-- Bookmarks -->
    <string name="filter">Filter</string>
    <string name="hide_past_events">Hide past sessions</string>
    <string name="export_bookmarks">Export bookmarks</string>
    <string name="export_bookmarks_file_name">%1$s bookmarks.ics</string>
    <string name="import_bookmarks">Import bookmarks</string>
    <string name="import_bookmarks_error">Unable to import bookmarks from the selected file.\n\nMake sure the file was created using this application and the conference year is matching.</string>
    <string name="no_bookmark">No bookmark.</string>
    <string name="remove_bookmarks">Remove bookmarks</string>
    <string name="bookmark_conflict_content_description">%1$s\n Other bookmarks are scheduled at the same time.</string>

    <plurals name="selected">
        <item quantity="other">%1$d selected</item>
    </plurals>

    <!-- Live -->
    <string name="next">Next</string>
    <string name="next_empty">During FOSDEM, the sessions to come in the next hour will be shown here.</string>
    <string name="now">Now</string>
    <string name="now_empty">During FOSDEM, the sessions in progress will be shown here.</string>

    <!-- Track types -->
    <string name="track_type_other">Other</string>
    <string name="track_type_keynote">Keynote</string>
    <string name="track_type_main_track">Main track</string>
    <string name="track_type_developer_room">Developer room</string>
    <string name="track_type_lightning_talk">Lightning talk</string>
    <string name="track_type_certification_exam">Certification Exam</string>
    <string name="track_type_junior">Junior</string>

    <!-- Room statuses -->
    <string name="room_status_open">Open</string>
    <string name="room_status_full">Full</string>
    <string name="room_status_emergency_evacuation">Emergency evacuation</string>

    <!-- Search -->
    <string name="search_events">Search sessions</string>
    <string name="search_hint">Session, track, person</string>
    <string name="search_clear">Clear text</string>
    <string name="no_search_result">No result.</string>

    <!-- External bookmarks -->
    <string name="external_bookmarks_title">External bookmarks</string>
    <string name="external_bookmarks_add_all">Add all</string>
    <string name="external_bookmarks_add_all_confirmation_title">Confirmation</string>
    <string name="external_bookmarks_add_all_confirmation_text">Add all sessions to your local bookmarks?</string>

    <!-- Errors -->
    <string name="event_not_found_error">Unable to load the session details.\nMake sure the database has been updated to the latest version.</string>
    <string name="schedule_loading_error">An error occurred during schedule update. Check your device connectivity.</string>
    <string name="schedule_loading_retry_action">Retry</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="settings_general">General</string>
    <string name="settings_general_use_device_time_zone_title">Use device time zone</string>
    <string name="settings_general_use_device_time_zone_summary_off">Display dates and times using the conference time zone</string>
    <string name="settings_general_use_device_time_zone_summary_on">Display dates and times using the device time zone</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_appearance_theme_title">Theme</string>
    <string-array name="settings_appearance_theme_entries">
        <item>System theme</item>
        <item>Light theme</item>
        <item>Dark theme</item>
    </string-array>
    <string-array name="settings_appearance_theme_values">
        <item>-1</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_notifications_enabled_title">Enable notifications</string>
    <string name="settings_notifications_enabled_summary">If checked, this will notify you of upcoming bookmarked sessions</string>
    <string name="settings_notifications_channel_title">Customize</string>
    <string name="settings_notifications_vibrate_title">Vibrate</string>
    <string name="settings_notifications_vibrate_summary">Vibrate on notification</string>
    <string name="settings_notifications_led_title">Flash led</string>
    <string name="settings_notifications_led_summary">Blink led on notification</string>
    <string name="settings_notifications_delay_title">Notification time</string>
    <string-array name="settings_notifications_delay_entries">
        <item>5 minutes before</item>
        <item>10 minutes before</item>
        <item>15 minutes before</item>
        <item>30 minutes before</item>
        <item>1 hour before</item>
    </string-array>
    <string-array name="settings_notifications_delay_entry_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>
    <string name="settings_info">Info</string>
    <string name="settings_info_about_title">About</string>
    <string name="settings_info_version_title">Version</string>

    <string name="notification_events_channel_name">Upcoming session alarms</string>

    <!-- Track schedule -->
    <string name="in_progress_content_description">%1$s (in progress)</string>

    <!-- Event details -->
    <string name="event_details">Session details</string>
    <string name="room_building">%1$s (Building %2$s)</string>
    <string name="track_content_description">Track: %1$s</string>
    <string name="time_content_description">Time: %1$s</string>
    <string name="room_content_description">Room: %1$s</string>
    <string name="details_content_description">Details: %1$s</string>
    <string name="in_bookmarks_content_description">In bookmarks: %1$s</string>
    <string name="attachments_header">Attachments</string>
    <string name="links_header">Links</string>
    <string name="add_bookmark">Add to bookmarks</string>
    <string name="remove_bookmark">Remove from bookmarks</string>
    <string name="share">Share</string>
    <string name="add_to_agenda">Add to agenda</string>
    <string name="submit_feedback">Submit feedback</string>
    <string name="calendar_not_found">No compatible calendar application found.</string>

    <plurals name="speakers">
        <item quantity="one">Speaker</item>
        <item quantity="other">Speakers</item>
    </plurals>

    <!-- Speaker info -->
    <string name="talks_header">Talks</string>
    <string name="more_info">More info</string>

    <!-- Others -->
    <string name="action_bar_up_description">Navigate up</string>
    <string name="room_map">Room map</string>
    <string name="directions">Directions to ULB</string>
    <string name="navigation">On-site navigation</string>
    <string name="no_data">No data available.</string>
    <string name="room_image_placeholder">No room image available.</string>
    <string name="volunteer">Volunteer</string>
    <string name="about_text">Programmed by <a href="https://www.digitalia.be/">Christophe Beyls</a>.
\n
\nLicensed under the Apache License, version 2.0. Source available on <a href="https://github.com/cbeyls/fosdem-companion-android">GitHub</a>.
\nThe name FOSDEM and the gear logo are registered trademarks of FOSDEM VZW.  Used with permission.
\n
\n<small>This application makes use of the following libraries:
\n- <a href="https://developer.android.com/jetpack">Android Jetpack</a><i> by The Android Open Source Project</i>
\n- <a href="https://material.io/develop/android">Material Components for Android</a><i> by The Android Open Source Project</i>
\n- <a href="https://github.com/ZacSweers/metro">Metro</a><i> by Zac Sweers</i>
\n- <a href="https://github.com/lysine-dev/okhttp">OkHttp</a><i> by Square, Inc.</i>
\n- <a href="https://github.com/square/moshi">Moshi</a><i> by Square, Inc.</i>
\n- <a href="https://github.com/JetBrains/kotlin">Kotlin Standard Library</a><i> by JetBrains s.r.o. and Kotlin Programming Language contributors</i>
\n- <a href="https://github.com/Kotlin/kotlinx.coroutines">kotlinx.coroutines</a><i> by JetBrains s.r.o.</i>
\n- <a href="https://github.com/Baseflow/PhotoView">PhotoView</a><i> by Chris Banes, Marek Sebera and John Carlson</i></small></string>

</resources>