<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_notifications">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_notifications_grey600_24dp"
            app:key="notifications_enabled"
            app:summary="@string/settings_notifications_enabled_summary"
            app:title="@string/settings_notifications_enabled_title" />
        <CheckBoxPreference
            app:defaultValue="true"
            app:dependency="notifications_enabled"
            app:key="notifications_vibrate"
            app:summary="@string/settings_notifications_vibrate_summary"
            app:title="@string/settings_notifications_vibrate_title" />
        <CheckBoxPreference
            app:defaultValue="true"
            app:dependency="notifications_enabled"
            app:key="notifications_led"
            app:summary="@string/settings_notifications_led_summary"
            app:title="@string/settings_notifications_led_title" />
        <ListPreference
            app:defaultValue="10"
            app:dependency="notifications_enabled"
            app:entries="@array/settings_notifications_delay_entries"
            app:entryValues="@array/settings_notifications_delay_entry_values"
            app:key="notifications_delay"
            app:title="@string/settings_notifications_delay_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_info">
        <Preference
            app:icon="@drawable/ic_info_outline_grey600_24dp"
            app:key="about"
            app:title="@string/settings_info_about_title" />
        <Preference
            app:key="version"
            app:title="@string/settings_info_version_title" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>