<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filter"
        android:title="@string/filter"
        app:iconTint="?colorControlNormal"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/hide_past_events"
                android:checkable="true"
                android:title="@string/hide_past_events" />
        </menu>
    </item>
    <item
        android:id="@+id/export_bookmarks"
        android:icon="@drawable/ic_file_upload_white_24dp"
        android:title="@string/export_bookmarks"
        app:iconTint="?colorControlNormal"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/import_bookmarks"
        android:icon="@drawable/ic_file_download_white_24dp"
        android:title="@string/import_bookmarks"
        app:iconTint="?colorControlNormal"
        app:showAsAction="ifRoom" />

</menu>